--- a/EasyEnglish.Theme/Components/Typography/H3.razor
+++ b/EasyEnglish.Theme/Components/Typography/H3.razor
@@ -1,3 +1,10 @@
 ﻿@using EasyEnglish.Theme.Constants
+@namespace EasyEnglish.Theme.Components.Typography
 
 <h3 class="@ThemeConstants.CssClasses.H3 @CssClass" @attributes="AdditionalAttributes">@ChildContent</h3>
+
+@code {
+    [Parameter] public RenderFragment? ChildContent { get; set; }
+    [Parameter] public string? CssClass { get; set; }
+    [Parameter(CaptureUnmatchedValues = true)] public Dictionary<string, object>? AdditionalAttributes { get; set; }
+}
